# opensearch-mcp-server-py

./: .gitignore  CHANGELOG.md  DEVELOPER_GUIDE.md  README.md  USER_GUIDE.md  conftest.py  example_clusters.yml  example_config.yml  pyproject.toml
.github/workflows/: ci.yml
docs/design/: custom-header-forwarding.md
src/common/: cluster_information.py  tool_filter.py  tool_params.py
src/mcp_server_opensearch/: __init__.py  __main__.py  cluster_information.py  clusters_information.py  global_state.py  logging_config.py  sse_server.py  stdio_server.py  streaming_server.py  tool_executor.py
src/opensearch/: client.py  connection.py  helper.py  tool_params.py
src/tools/: common.py  config.py  generic_api_tool.py  tool_filter.py  tool_generator.py  tool_logging.py  tool_params.py  tools.py
tests/mcp_server_opensearch/: test_clusters_information.py  test_common.py  test_logging_config.py  test_sse_server.py  test_stdio_server.py  test_streaming_server.py  test_tool_executor.py
tests/opensearch/: test_client.py  test_helper.py  test_response_size_limiting.py
tests/tools/: test_config.py  test_generic_tool.py  test_tool_filters.py  test_tool_generator.py  test_tool_logging.py  test_tools.py  test_write_protection_simple.py
